# fast_api

./: .coveragerc  .flake8  .gitignore  Taskfile.yml  dataclass.py  invent_pydantic.py  pydenic.py  pyproject.toml  requirements.txt  script.py
.github/workflows/: qa.yaml
.run/: code - black.run.xml  code - isort.run.xml  code - mypy.run.xml  tests - algo.run.xml  tests - all.run.xml
algo/linkedlist/: linkedlist.py  linkedlist_test.py  uni.py  uni_test.py
examples/: cat.py  classes.py  data.py  data_types.py  decorators.py  multitask_asyncio.py  multitask_threads.py
examples/long_task_api/: app.py  tasks.py  utils.py
review/: __main__.py  invent_pydantic.py  lambda.py  new_attr.py  pec.py  task_16_07.py  test_lambda.py  user.py  user_rename.py
systemprogramming/: chunkreads.py  socket.py
tests-example/: api.py  test_unit.py  unit.py
