[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "fast-api"
packages = []
readme = "README.md"
version = "0.1.0"


[tool.poetry.dependencies]
aiohttp = "^3.8.3"
anyio = "^3.6.2"
attrs = "^22.2.0"
fastapi = "^0.91.0"
greenlet = "^2.0.2"
httpx = "^0.23.3"
orjson = "^3.8.6"
pendulum = "^2.1.2"
pip = "^23.0"
pydantic = "^1.10.4"
python = "3.10.10"
python-dotenv = "^0.21.1"
requests = "^2.28.2"
uvicorn = "^0.20.0"
watchfiles = "^0.18.1"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
coverage = "^7.1.0"
devtools = "^0.10.0"
dlint = "^0.14.0"
flake8 = "^6.0.0"
flake8-annotations-complexity = "^0.0.7"
flake8-bandit = "^4.1.1"
flake8-black = "^0.3.6"
flake8-bugbear = "^23.1.20"
flake8-builtins = "^2.1.0"
flake8-cognitive-complexity = "^0.1.0"
flake8-comprehensions = "^3.10.1"
flake8-debugger = "^4.1.2"
flake8-executable = "^2.1.3"
flake8-expression-complexity = "^0.0.11"
flake8-fixme = "^1.1.1"
flake8-isort = "^6.0.0"
flake8-multiline-containers = "^0.0.19"
flake8-mutable = "^1.2.0"
flake8-pep3101 = "^2.0.0"
flake8-print = "^5.0.0"
flake8-printf-formatting = "^1.1.2"
flake8-simplify = "^0.19.3"
flake8-variables-names = "^0.0.5"
httpie = "^3.2.1"
ipython = "^8.10.0"
isort = "^5.12.0"
mypy = "^1.0.0"
pep8-naming = "^0.13.3"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
types-requests = "^2.28.11.12"


[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]


[tool.black]
line-length = 79
target-version = ["py310"]
include = '^.+\.pyi?$'
extend-exclude = '''
(
    .*\.local.*
    | .*\.github.*
    | .*\.idea.*
    | .*\.run.*
    | .*\.venv.*
    | .*\.vscode.*
    | .*\venv.*
)
'''


[tool.isort]
force_single_line = true
line_length = 79
multi_line_output = 3
profile = "black"
skip = [
    ".git",
    ".github",
    ".idea",
    ".local",
    ".run",
    ".venv",
    ".vscode",
    "venv",
]


[tool.mypy]
cache_dir = ".local/mypy/"
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
exclude = [
    ".git",
    ".github",
    ".idea",
    ".local",
    ".run",
    ".venv",
    ".vscode",
    "venv",
]
files = ["."]
no_implicit_optional = true
pretty = true
python_version = "3.10"
show_error_context = true
sqlite_cache = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true


[tool.pytest.ini_options]
addopts = "--cov --cov-branch --no-cov-on-fail --cov-fail-under=90"
cache_dir = ".local/pytest/"
console_output_style = "count"
filterwarnings = [
    "ignore::DeprecationWarning",
]
testpaths = [
    ".",
]
